crates/rome_cli/tests/snapshots/main_commands_format/max_diagnostics_default.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
The number of diagnostics exceeds the number allowed by Rome.
Diagnostics not shown: 10.
```

```block
Compared 60 file(s) in <TIME>
```


