crates/rome_cli/tests/snapshots/main_commands_format/no_supported_file_found.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no supported files were found in the specified folders.
```

# Emitted Messages


