crates/rome_cli/tests/snapshots/main_commands_format/with_semicolons_options.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
statement()

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


