crates/rome_cli/tests/snapshots/main_commands_format/write_only_files_in_correct_base.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `scripts/format.js`

```js
  statement(  )  
```

## `src/format.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file(s) in 6ms
```


